@@ -12,9 +12,12 @@ public class ExamineSummaryQueueTest
 	public void nativeResponseReturnsOneCompactBlockOnce()
 	{
 		ExamineSummaryQueue queue = new ExamineSummaryQueue();
-		queue.add(List.of("Melee", "Ranged", "Element"), 100);
+		queue.add("Vorkath", List.of("Melee", "Ranged", "Element"), 100);
 
-		assertEquals("Melee<br>Ranged<br>Element", queue.onNpcExamine("Vanilla examine text.", 101));
+		ExamineSummaryQueue.Examined examined = queue.onNpcExamine("Vanilla examine text.", 101);
+
+		assertEquals("Melee<br>Ranged<br>Element", examined.getBlock());
+		assertEquals("Vorkath", examined.getMonsterName());
 		assertNull(queue.onNpcExamine("Another native message.", 101));
 	}
 
@@ -22,31 +25,30 @@ public class ExamineSummaryQueueTest
 	public void injectedBlockCannotConsumeTheNextNativeResponse()
 	{
 		ExamineSummaryQueue queue = new ExamineSummaryQueue();
-		queue.add(List.of("<colHIGHLIGHT>Examined A stats:<colNORMAL>",
-			"<col=ff4040>Melee:</col> Crush (+0)"), 100);
-		String first = queue.onNpcExamine("Vanilla A", 100);
-		queue.add(List.of("Summary B"), 101);
+		queue.add("A", List.of("<col=ff4040>Melee:</col> Crush (+0)"), 100);
+		String first = queue.onNpcExamine("Vanilla A", 100).getBlock();
+		queue.add("B", List.of("Summary B"), 101);
 
 		assertNull(queue.onNpcExamine(first, 101));
-		assertEquals("Summary B", queue.onNpcExamine("Vanilla B", 102));
+		assertEquals("Summary B", queue.onNpcExamine("Vanilla B", 102).getBlock());
 	}
 
 	@Test
 	public void unknownMonsterKeepsRapidResponsesAligned()
 	{
 		ExamineSummaryQueue queue = new ExamineSummaryQueue();
-		queue.add(Collections.emptyList(), 100);
-		queue.add(List.of("Known summary"), 100);
+		queue.add(null, Collections.emptyList(), 100);
+		queue.add("Known", List.of("Known summary"), 100);
 
 		assertNull(queue.onNpcExamine("Unknown monster's text.", 100));
-		assertEquals("Known summary", queue.onNpcExamine("Known monster's text.", 101));
+		assertEquals("Known summary", queue.onNpcExamine("Known monster's text.", 101).getBlock());
 	}
 
 	@Test
 	public void clearingPendingPreventsAStaleResponse()
 	{
 		ExamineSummaryQueue queue = new ExamineSummaryQueue();
-		queue.add(List.of("Stale summary"), 100);
+		queue.add("Stale", List.of("Stale summary"), 100);
 
 		queue.clearPending();
 
@@ -57,10 +59,10 @@ public class ExamineSummaryQueueTest
 	public void missingResponseExpiresBeforeTheNextExamine()
 	{
 		ExamineSummaryQueue queue = new ExamineSummaryQueue();
-		queue.add(List.of("Missing summary"), 100);
+		queue.add("Missing", List.of("Missing summary"), 100);
 
-		queue.add(List.of("Current summary"), 106);
+		queue.add("Current", List.of("Current summary"), 106);
 
-		assertEquals("Current summary", queue.onNpcExamine("Current vanilla response", 106));
+		assertEquals("Current summary", queue.onNpcExamine("Current vanilla response", 106).getBlock());
 	}
 }
